/** @page apreq_changes CHANGES
@brief List of major changes.


@section v2_05 Changes with libapreq2-2.05


- C API [joes]
  Reorganize around include/, library/, and module/ dirs.

- C Tests [joes]
  Replace CuTest-based tests with custom TAP-compliant framework.

- C API [Max Kellermann]
  Continue the API improvements:

  - Convert APREQ_RUN_PARSER and APREQ_RUN_HOOK to inline, and downcase them.
  - Remove apreq_memmem.
  - Convert apreq_(un)escape to inline.
  - apreq_escape does not create an apreq_value_t*.
  - Initialize default_parsers explicitly to NULL.
  - Convert APREQ_BRIGADE_COPY to inline, and downcase it.
  - Lowercase APREQ_BRIGADE_SETASIDE, APREQ_BRIGADE_COPY.
  - Convert apreq_cookie_name and apreq_cookie_value macros to inline.
  - Convert apreq_param_name, apreq_param_value, apreq_param_info, and
    apreq_param_brigade to inline.
  - Add apreq_initialize to allow thread-safe parser registration.

- C API [joes]
  Widespread API refactorization to remove apreq_jar_t and apreq_request_t:
  
  - Header includes reorganized; apreq_parsers.h added (back again).
  - Replaced apreq_jar_t and apreq_request_t with single apreq_env_handle_t.
  - Added const qualifier to "v" attribute of apreq_cookie_t and apreq_param_t.
  - Use union type-puns to drop const qualifiers inside the new
    apreq_value_to_cookie and apreq_value_to_param implementations
    (gcc generates same object code as the macro versions did).
  - Moved "flags" attribute from apreq_value_t to apreq_cookie_t and apreq_param_t.
  - Remove env argument from hooks and parsers.
  - Reduce apreq_env_module to minimal set of operations.
  - Replace apreq_log calls with apreq-specific error codes.
  - Hooks are called on each body param now, not just during file uploads.
  - Tie the cgi handle to its creator pool.

  Detailed changes by header file:

  [apreq.h]
  - Remove flags from apreq_value_t.
  - Remove const qualifier from apreq_value_t's "name" attribute.